# rag_pdf

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: config.py  logger.py
src/ingestion/: __init__.py  chunker.py  indexer.py  parser.py  run_ingestion.py
src/rag/: graph.py  llm.py  prompts.py  retriever.py
tests/: test_ingestion.py  test_retriever.py
